--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^9.12.0",
+    "canvas-confetti": "^1.6.0",
+    "nanoid": "^4.0.1",
     "vue": "^3.2.41"
   },
   "devDependencies": {
